[package]
name = "ragit-pdl-command"
version = "0.1.0"
edition = "2021"

[dependencies]
ragit-api = { path = "../api" }
ragit-index = { path = "../ragit-index" }
ragit-pdl = { path = "../pdl" }
ragit-utils = { path = "../ragit-utils" }
ragit-model = { path = "../ragit-model" }
ragit-types = { path = "../ragit-types" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tera = "1.20"
clap = { version = "4.5", features = ["derive"] }
value-trait = "0.1.0"
