[package]
name = "ragit-query"
version = "0.1.0"
edition = "2021"

[dependencies]
ragit-index = { path = "../ragit-index" }
ragit-index-io = { path = "../ragit-index-io" }
ragit-uid = { path = "../ragit-uid" }
ragit-error = { path = "../ragit-error" }
ragit-index-types = { path = "../ragit-index-types" }
lazy_static = "1.5.0"
regex = "1.11.1"